# rivapi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  environment-dev.yml  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
examples/: test_bom_client.py  test_eaufrance_client.py  test_usgs_nwis_client.py
src/rivapi/: __init__.py  cache.py  cli.py  config.py  decorators.py  rivapi.py
src/rivapi/clients/: base.py  bom.py  bom_helpers.py  eaufrance.py  eaufrance_helpers.py  usgs.py
src/rivapi/data/: imgw_hydro_stations.csv
tests/: __init__.py  test_rivapi.py
